removes information regarding partial generation which was removed in sculptor/sculptor#92